レスポンシブ

--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 </head>
 <body>
     <header class="header">
+        <div class="sp-menu">
+            <ul class="sp-nav">
+                <li><a href="">HOME</a></li>
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">SKILL</a></li>
+                <li><a href="">WORKS</a></li>
+            </ul>
+        </div>
         <h1 class="top-title">KOUHEI KOBAYASHI</h1>
         <div class="header_nav">
             <ul class="nav-list">
@@ -19,6 +27,13 @@
                 <li><a href="">WORKS</a></li>
             </ul>
         </div>
+        <a href="#" class="sp-trigger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+                
+         
     </header>
    
     <div class="main-wrap">
@@ -46,7 +61,7 @@
                     </div>
                     <div class="history">
                         <h3>2018~2020</h3>
-                        <h4>・PUBLIC STAND時代</h4>
+                        <h4>・株式会社スリーピラーズ時代</h4>
                         <p>・スタンディングバー形式で、商品を売るというより「体験を売る」ということに重きをおいた営業をしておりました。</p>
                         <p>・担当していた業務はチームマネジメント、KPI達成のための施策、イベントの運用、在庫管理、営業する上での業務全般を担当しておりました。</p>
                     </div>
